# open_terminal_and_run

./: README.md  open_terminal_and_run.py  open_terminal_window_and_run.py  pyproject.toml
.github/workflows/: ci.yml
tests/: conftest.py  sentinel_writer_helper.py  test_cli.py  test_command_construction.py  test_detection.py  verify_real_spawn_writes_sentinel_file.py
